kube_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: trends-analyzer
  labels:
    name: trends-analyzer
