kube.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: trends-analyzer
  namespace: trends-analyzer
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: trends-analyzer
    spec:
      containers:
      - name: trends-analyzer
        image: cezkuj/trends-analyzer:0.1.1
        args: ["-o", "($DB_HOST)", "-n", "$NEWSAPIKEY", "-p", "trends_analyzer", "-t", "$TWITTERAPIKEY"]
        ports:
        - containerPort: 8000
          name: http-api
        volumeMounts:
        - name: gcloud-vol
          mountPath: "~/.gcloud.json"
          readOnly: true
      volumes:
      - name: gcloud-vol
        secret:
          secretName: gcloud-creds
---
apiVersion: v1
kind: Service
metadata:
  name: trends-analyzer
  namespace: trends-analyzer
spec:
  ports:
  - port: 8000
  selector:
    app: trends-analyzer
