traefik_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trends-analyzer
  namespace: trends-analyzer
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: trends-analyzer
          servicePort: 8000
      - path: /
        backend:
          serviceName: trends-analyzer-ui
          servicePort: 80
